Fix HTML encoding issues in dynamic_lexer.html

--- a/dynamic_lexer.html
+++ b/dynamic_lexer.html
@@ -372,7 +372,7 @@ a + b * c / d</textarea>
             'ERROR': 'token-error'
         };
 
-        // Simple JavaScript tokenizer (for demonstration)
+        // Simple JavaScript tokenizer for the theory (for demonstration)
         // In a real implementation, this would use the actual DFA
         function simpleTokenize(code) {
             const tokens = [];
@@ -577,6 +577,7 @@ const lines = code.substr(0, codeInput.selectionStart).split('\n');
 </html>
 
     
+
 
 
 
